fix: package-json.lock files are generated even if npm is not the package manager (#114)
## Description

This fix #113 
I also took the opportunity to:
* make system calls using an array of strings 
* remove unused and commented code
* Add TODOs for future work
* Move some hardcoded strings into constants
* Refactor the provider to be instantiated with the path
* Use `Path` instead of `Paths`
* Use a common functionality for accessing Environment variables and
System properties: Prefer properties over EnvVars
* Implement componentAnalysis with a file path

**Related issue (if any):** fixes #issue_number_goes_here

## Checklist

- [x] I have followed this repository's contributing guidelines.
- [x] I will adhere to the project's code of conduct.

---------

Signed-off-by: Carlos Feria <2582866+carlosthe19916@users.noreply.github.com>
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>
Co-authored-by: Carlos Feria <2582866+carlosthe19916@users.noreply.github.com>