@@ -53,6 +53,7 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
@@ -63,8 +64,9 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junitpioneer.jupiter.ClearEnvironmentVariable;
-import org.junitpioneer.jupiter.SetEnvironmentVariable;
+import org.junitpioneer.jupiter.ClearSystemProperty;
+import org.junitpioneer.jupiter.RestoreSystemProperties;
+import org.junitpioneer.jupiter.SetSystemProperty;
 import org.mockito.ArgumentMatcher;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -73,11 +75,11 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
-@ClearEnvironmentVariable(key = "EXHORT_SNYK_TOKEN")
-@ClearEnvironmentVariable(key = "EXHORT_DEV_MODE")
-@ClearEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL")
-@ClearEnvironmentVariable(key = "RHDA_TOKEN")
-@ClearEnvironmentVariable(key = "RHDA_SOURCE")
+@ClearSystemProperty(key = "EXHORT_SNYK_TOKEN")
+@ClearSystemProperty(key = "EXHORT_DEV_MODE")
+@ClearSystemProperty(key = "DEV_EXHORT_BACKEND_URL")
+@ClearSystemProperty(key = "RHDA_TOKEN")
+@ClearSystemProperty(key = "RHDA_SOURCE")
 @SuppressWarnings("unchecked")
 class Exhort_Api_Test extends ExhortTest {
   @Mock Provider mockProvider;
@@ -92,21 +94,20 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
+  @SetSystemProperty(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
   void stackAnalysisHtml_with_pom_xml_should_return_html_report_from_the_backend()
       throws IOException, ExecutionException, InterruptedException {
     // create a temporary pom.xml file
     var tmpFile = Files.createTempFile("exhort_test_pom_", ".xml");
     try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"tst_manifests", "maven", "empty", "pom.xml"})) {
+        getResourceAsStreamDecision(this.getClass(), "tst_manifests/maven/empty/pom.xml")) {
       Files.write(tmpFile, is.readAllBytes());
     }
 
     // stub the mocked provider with a fake content object
-    given(mockProvider.provideStack(tmpFile))
+    given(mockProvider.provideStack())
         .willReturn(new Provider.Content("fake-body-content".getBytes(), "fake-content-type"));
 
     // create an argument matcher to make sure we mock the response to for right request
@@ -126,7 +127,7 @@ class Exhort_Api_Test extends ExhortTest {
     byte[] expectedHtml;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.html"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.html")) {
       expectedHtml = is.readAllBytes();
     }
 
@@ -154,40 +155,30 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
-  //    System.setProperty("RHDA_TOKEN", "rhda-token-from-property");
-  //    System.setProperty("RHDA_SOURCE", "rhda-source-from-property");
-  @SetEnvironmentVariable(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
+  @SetSystemProperty(key = "EXHORT_SNYK_TOKEN", value = "snyk-token")
+  @SetSystemProperty(key = "RHDA_TOKEN", value = "rhda-token")
+  @SetSystemProperty(key = "RHDA_SOURCE", value = "rhda-source")
   void stackAnalysis_with_pom_xml_should_return_json_object_from_the_backend()
       throws IOException, ExecutionException, InterruptedException {
     // create a temporary pom.xml file
     var tmpFile = Files.createTempFile("exhort_test_pom_", ".xml");
     try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"tst_manifests", "maven", "empty", "pom.xml"})) {
+        getResourceAsStreamDecision(this.getClass(), "tst_manifests/maven/empty/pom.xml")) {
       Files.write(tmpFile, is.readAllBytes());
     }
 
     // stub the mocked provider with a fake content object
-    given(mockProvider.provideStack(tmpFile))
+    given(mockProvider.provideStack())
         .willReturn(new Provider.Content("fake-body-content".getBytes(), "fake-content-type"));
-
-    // we expect this to be ignored because tokens from env vars takes precedence
-    System.setProperty("EXHORT_SNYK_TOKEN", "snyk-token-from-property");
 
     // create an argument matcher to make sure we mock the response for the right request
     ArgumentMatcher<HttpRequest> matchesRequest =
         r ->
             r.headers().firstValue("Content-Type").get().equals("fake-content-type")
                 && r.headers().firstValue("Accept").get().equals("application/json")
-                &&
-                // snyk token is set using the environment variable (annotation) - ignored the one
-                // set in
-                // properties
-                r.headers().firstValue("ex-snyk-token").get().equals("snyk-token-from-env-var")
-                && r.headers().firstValue("rhda-token").get().equals("rhda-token-from-env-var")
-                && r.headers().firstValue("rhda-source").get().equals("rhda-source-from-env-var")
+                && r.headers().firstValue("ex-snyk-token").get().equals("snyk-token")
+                && r.headers().firstValue("rhda-token").get().equals("rhda-token")
+                && r.headers().firstValue("rhda-source").get().equals("rhda-source")
                 && r.headers().firstValue("rhda-operation-type").get().equals("Stack Analysis")
                 && r.method().equals("POST");
 
@@ -196,7 +187,7 @@ class Exhort_Api_Test extends ExhortTest {
     AnalysisReport expectedAnalysis;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.json"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.json")) {
       expectedAnalysis = mapper.readValue(is, AnalysisReport.class);
     }
 
@@ -224,18 +215,19 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
+  @RestoreSystemProperties
   void componentAnalysis_with_pom_xml_should_return_json_object_from_the_backend()
       throws IOException, ExecutionException, InterruptedException {
     // load pom.xml
-    byte[] targetPom;
-    try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"tst_manifests", "maven", "empty", "pom.xml"})) {
-      targetPom = is.readAllBytes();
-    }
+    Path tempDir =
+        new TempDirFromResources()
+            .addFile("pom.xml")
+            .fromResources("tst_manifests/maven/empty/pom.xml")
+            .getTempDir();
+    byte[] targetPom = Files.readAllBytes(tempDir.resolve("pom.xml"));
 
     // stub the mocked provider with a fake content object
-    given(mockProvider.provideComponent(targetPom))
+    given(mockProvider.provideComponent())
         .willReturn(new Provider.Content("fake-body-content".getBytes(), "fake-content-type"));
 
     // we expect this to picked up because no env var to take precedence
@@ -262,7 +254,7 @@ class Exhort_Api_Test extends ExhortTest {
     AnalysisReport expectedReport;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.json"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.json")) {
       expectedReport = mapper.readValue(is, AnalysisReport.class);
     }
 
@@ -274,14 +266,14 @@ class Exhort_Api_Test extends ExhortTest {
     // mock static getProvider utility function
     try (var ecosystemTool = mockStatic(Ecosystem.class)) {
       // stub static getProvider utility function to return our mock provider
-      ecosystemTool.when(() -> Ecosystem.getProvider("pom.xml")).thenReturn(mockProvider);
+      ecosystemTool.when(() -> Ecosystem.getProvider(tempDir)).thenReturn(mockProvider);
 
       // stub the http client to return our mocked response when request matches our arg matcher
       given(mockHttpClient.sendAsync(argThat(matchesRequest), any()))
           .willReturn(CompletableFuture.completedFuture(mockHttpResponse));
 
       // when invoking the api for a json stack analysis report
-      var responseAnalysis = exhortApiSut.componentAnalysis("pom.xml", targetPom);
+      var responseAnalysis = exhortApiSut.componentAnalysis(tempDir.toString(), targetPom);
       // verify we got the correct analysis report
       then(responseAnalysis.get()).isEqualTo(expectedReport);
     }
@@ -296,7 +288,7 @@ class Exhort_Api_Test extends ExhortTest {
     AnalysisReport expectedJson;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.json"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.json")) {
       expectedJson = mapper.readValue(is, AnalysisReport.class);
     }
 
@@ -304,20 +296,19 @@ class Exhort_Api_Test extends ExhortTest {
     byte[] expectedHtml;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.html"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.html")) {
       expectedHtml = is.readAllBytes();
     }
 
     // create a temporary pom.xml file
     var tmpFile = Files.createTempFile("exhort_test_pom_", ".xml");
     try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"tst_manifests", "maven", "empty", "pom.xml"})) {
+        getResourceAsStreamDecision(this.getClass(), "tst_manifests/maven/empty/pom.xml")) {
       Files.write(tmpFile, is.readAllBytes());
     }
 
     // stub the mocked provider with a fake content object
-    given(mockProvider.provideStack(tmpFile))
+    given(mockProvider.provideStack())
         .willReturn(new Provider.Content("fake-body-content".getBytes(), "fake-content-type"));
 
     // create an argument matcher to make sure we mock the response for the right request
@@ -331,7 +322,7 @@ class Exhort_Api_Test extends ExhortTest {
     byte[] mixedResponse;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.mixed"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.mixed")) {
       mixedResponse = is.readAllBytes();
     }
 
@@ -360,18 +351,18 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
+  @RestoreSystemProperties
   void componentAnalysis_with_pom_xml_as_path_should_return_json_object_from_the_backend()
       throws IOException, ExecutionException, InterruptedException {
     // load pom.xml
     var tmpFile = Files.createTempFile("exhort_test_pom_", ".xml");
     try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"tst_manifests", "maven", "empty", "pom.xml"})) {
+        getResourceAsStreamDecision(this.getClass(), "tst_manifests/maven/empty/pom.xml")) {
       Files.write(tmpFile, is.readAllBytes());
     }
 
     // stub the mocked provider with a fake content object
-    given(mockProvider.provideComponent(tmpFile))
+    given(mockProvider.provideComponent())
         .willReturn(new Provider.Content("fake-body-content".getBytes(), "fake-content-type"));
 
     // we expect this to picked up because no env var to take precedence
@@ -393,7 +384,7 @@ class Exhort_Api_Test extends ExhortTest {
     AnalysisReport expectedReport;
     try (var is =
         getResourceAsStreamDecision(
-            this.getClass(), new String[] {"dummy_responses", "maven", "analysis-report.json"})) {
+            this.getClass(), "dummy_responses/maven/analysis-report.json")) {
       expectedReport = mapper.readValue(is, AnalysisReport.class);
     }
 
@@ -420,109 +411,36 @@ class Exhort_Api_Test extends ExhortTest {
     }
   }
 
-  @AfterEach
-  void afterEach() {
-    System.clearProperty("EXHORT_DEV_MODE");
-    System.clearProperty("DEV_EXHORT_BACKEND_URL");
-    System.clearProperty("RHDA_TOKEN");
-    System.clearProperty("RHDA_SOURCE");
-  }
-
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "true")
-  @ClearEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL")
-  void check_Exhort_Url_When_DEV_Mode_true_Both() {
-    System.setProperty("EXHORT_DEV_MODE", "true");
-    ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-  }
-
-  @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "true")
-  @ClearEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL")
-  void check_Exhort_Url_When_env_DEV_Mode_true_property_DEV_Mode_false() {
-    System.setProperty("EXHORT_DEV_MODE", "false");
-    ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-  }
-
-  @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "true")
-  @ClearEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL")
-  void
-      check_Exhort_Url_When_env_DEV_Mode_true_And_DEV_Exhort_Url_Set_Then_Default_DEV_Exhort_URL_Not_Selected() {
+  @SetSystemProperty(key = "EXHORT_DEV_MODE", value = "true")
+  @ClearSystemProperty(key = "DEV_EXHORT_BACKEND_URL")
+  @RestoreSystemProperties
+  void check_Exhort_Url_When_DEV_Mode_true_And_DEV_Exhort_Url_Set() {
     String dummyUrl = "http://dummy-url";
     System.setProperty("DEV_EXHORT_BACKEND_URL", dummyUrl);
     ExhortApi exhortApi = new ExhortApi();
     then(exhortApi.getEndpoint()).isEqualTo(dummyUrl);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "false")
-  @ClearEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL")
-  void
-      check_Exhort_Url_When_env_DEV_Mode_false_And_DEV_Exhort_Url_Set_Then_Default_DEV_Exhort_URL_Not_Selected() {
-    System.setProperty("EXHORT_DEV_MODE", "false");
+  @SetSystemProperty(key = "EXHORT_DEV_MODE", value = "false")
+  void check_Exhort_Url_When_DEV_Mode_false_And_DEV_Exhort_Url_Set() {
     ExhortApi exhortApi = new ExhortApi();
     then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "false")
-  void
-      check_Exhort_Url_When_env_DEV_Mode_false_And_Property_Dev_Mode_true_Default_Exhort_URL_Selected() {
-    System.setProperty("EXHORT_DEV_MODE", "true");
+  @SetSystemProperty(key = "EXHORT_DEV_MODE", value = "true")
+  void check_Exhort_Url_When_DEV_Mode_true_Dev_Exhort_URL_Selected() {
     ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
-  }
-
-  @Test
-  @SetEnvironmentVariable(key = "EXHORT_DEV_MODE", value = "false")
-  @SetEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL", value = "http://dummy-route")
-  void
-      check_Exhort_Url_When_env_DEV_Mode_false_And_DEV_Exhort_Url_Set_Then_Default_Exhort_URL_Selected_Anyway() {
-    System.setProperty("EXHORT_DEV_MODE", "true");
-    System.setProperty("DEV_EXHORT_BACKEND_URL", "http://dummy-route2");
-    ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-    then(exhortApi.getEndpoint()).isNotEqualTo(System.getenv("DEV_EXHORT_BACKEND_URL"));
-    then(exhortApi.getEndpoint()).isNotEqualTo(System.getProperty("DEV_EXHORT_BACKEND_URL"));
-  }
-
-  @Test
-  void
-      check_Exhort_Url_When_env_DEV_Mode_not_set_And_Property_Exhort_Dev_Mode_false_Then_Default_Exhort_URL_Selected() {
-    System.setProperty("EXHORT_DEV_MODE", "false");
-    ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
-  }
-
-  @Test
-  void
-      check_Exhort_Url_When_env_DEV_Mode_not_set_And_Property_Exhort_Dev_Mode_true_Then_Default_DEV_Exhort_URL_Selected() {
-    System.setProperty("EXHORT_DEV_MODE", "true");
-    ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT);
     then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
   }
 
   @Test
-  @SetEnvironmentVariable(key = "DEV_EXHORT_BACKEND_URL", value = "http://dummy-route")
-  void
-      check_Exhort_Url_When_env_DEV_Mode_not_set_And_Property_Exhort_Dev_Mode_true_and_Env_DEV_Exhort_Backend_Url_Set_Then_DEV_ENV_Exhort_URL_Selected() {
-    System.setProperty("EXHORT_DEV_MODE", "true");
-    System.setProperty("DEV_EXHORT_BACKEND_URL", "http://dummy-route2");
+  @SetSystemProperty(key = "EXHORT_DEV_MODE", value = "false")
+  void check_Exhort_Url_When_DEV_Mode_not_set_Then_Default_Exhort_URL_Selected() {
     ExhortApi exhortApi = new ExhortApi();
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT);
-    then(exhortApi.getEndpoint()).isNotEqualTo(ExhortApi.DEFAULT_ENDPOINT_DEV);
-    then(exhortApi.getEndpoint()).isNotEqualTo("http://dummy-route2");
-    then(exhortApi.getEndpoint()).isEqualTo("http://dummy-route");
+    then(exhortApi.getEndpoint()).isEqualTo(ExhortApi.DEFAULT_ENDPOINT);
   }
 
   @Test
@@ -532,18 +450,15 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
+  @SetSystemProperty(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
   void test_image_analysis()
       throws IOException, ExecutionException, InterruptedException, MalformedPackageURLException {
     try (MockedStatic<Operations> mock = Mockito.mockStatic(Operations.class);
-        var sbomIS =
-            getResourceAsStreamDecision(
-                this.getClass(), new String[] {"msc", "image", "image_sbom.json"});
+        var sbomIS = getResourceAsStreamDecision(this.getClass(), "msc/image/image_sbom.json");
         var reportIS =
-            getResourceAsStreamDecision(
-                this.getClass(), new String[] {"msc", "image", "image_reports.json"})) {
+            getResourceAsStreamDecision(this.getClass(), "msc/image/image_reports.json")) {
 
       var imageRef =
           new ImageRef(
@@ -632,18 +547,15 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
+  @SetSystemProperty(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
   void imageAnalysisHtml()
       throws IOException, ExecutionException, InterruptedException, MalformedPackageURLException {
     try (MockedStatic<Operations> mock = Mockito.mockStatic(Operations.class);
-        var sbomIS =
-            getResourceAsStreamDecision(
-                this.getClass(), new String[] {"msc", "image", "image_sbom.json"});
+        var sbomIS = getResourceAsStreamDecision(this.getClass(), "msc/image/image_sbom.json");
         var reportIS =
-            getResourceAsStreamDecision(
-                this.getClass(), new String[] {"msc", "image", "image_reports.json"})) {
+            getResourceAsStreamDecision(this.getClass(), "msc/image/image_reports.json")) {
 
       var imageRef =
           new ImageRef(
@@ -711,14 +623,12 @@ class Exhort_Api_Test extends ExhortTest {
   }
 
   @Test
-  @SetEnvironmentVariable(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
-  @SetEnvironmentVariable(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
+  @SetSystemProperty(key = "EXHORT_SNYK_TOKEN", value = "snyk-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_TOKEN", value = "rhda-token-from-env-var")
+  @SetSystemProperty(key = "RHDA_SOURCE", value = "rhda-source-from-env-var")
   void test_perform_batch_analysis()
       throws IOException, MalformedPackageURLException, ExecutionException, InterruptedException {
-    try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"msc", "image", "image_sbom.json"})) {
+    try (var is = getResourceAsStreamDecision(this.getClass(), "msc/image/image_sbom.json")) {
       var sbomsGenerator = mock(Supplier.class);
       var responseBodyHandler = mock(HttpResponse.BodyHandler.class);
       var responseGenerator = mock(Function.class);
@@ -776,9 +686,7 @@ class Exhort_Api_Test extends ExhortTest {
   @Test
   void test_get_batch_image_sboms() throws IOException, MalformedPackageURLException {
     try (MockedStatic<Operations> mock = Mockito.mockStatic(Operations.class);
-        var is =
-            getResourceAsStreamDecision(
-                this.getClass(), new String[] {"msc", "image", "image_sbom.json"})) {
+        var is = getResourceAsStreamDecision(this.getClass(), "msc/image/image_sbom.json")) {
       var imageRef =
           new ImageRef(
               "test.io/test/test-app:test-version@sha256:1fafb0905264413501df60d90a92ca32df8a2011cbfb4876ddff5ceb20c8f165",
@@ -825,9 +733,7 @@ class Exhort_Api_Test extends ExhortTest {
 
   @Test
   void test_get_batch_image_analysis_reports() throws IOException, MalformedPackageURLException {
-    try (var is =
-        getResourceAsStreamDecision(
-            this.getClass(), new String[] {"msc", "image", "image_reports.json"})) {
+    try (var is = getResourceAsStreamDecision(this.getClass(), "msc/image/image_reports.json")) {
       var json =
           new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))
               .lines()
